syntax = "proto3";

import "proto/build_event_stream.proto";

package invocation;

message Invocation {
    // The invocation identifier itself.
    string invocation_id = 1;

    // The ordered set of build events generated by this invocation.
    repeated build_event_stream.BuildEvent build_event = 2;

    // Whether or not the build was successful.
    bool success = 3;

    // The unix-user who performed this build.
    string user = 4;

    // The duration of this build, from start to finish.
    int64 duration_usec = 5;

    // The host this build was executed on.
    string host = 6;

    // The command performed (usually "build" or "test").
    string command = 7;

    // The build patterns specified for this build.
    repeated string pattern = 8;

    // The number of actions performed.
    int64 action_count = 9;
}

message InvocationQuery {
    // The invocation_id: a UUID generated by the bazel run.
    string invocation_id = 1;
}

message GetInvocationRequest {
    InvocationQuery query = 1;
}

message GetInvocationResponse {
    repeated Invocation invocation = 1;
}
