syntax = "proto3";

import "proto/invocation.proto";

package service;

service BuildBuddyService {
  rpc GetInvocation(invocation.GetInvocationRequest)
      returns (invocation.GetInvocationResponse);
}
